--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maxium-scale=1.0, minium-scale=1.0">
 	<title>Digital Clock 12hrs.</title>
-	<link rel="stylesheet" href="estilos.css">
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 	<div class="wrap">
